# ndg-lang

./: .gitignore  CMakeLists.txt  README.rst  example.ndg
source/: hashtable.c  hashtable.h  lexer.c  lexer.h  main.c  utils.h
